on-prem/ServiceMeshLite/coe/manifest/cic-vpx.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cic-k8s-ingress-controller
spec:
  selector:
    matchLabels:
      app: cic-k8s-ingress-controller
  replicas: 1
  template:
    metadata:
      name: cic-k8s-ingress-controller
      labels:
        app: cic-k8s-ingress-controller
      annotations:
    spec: 
      serviceAccountName: cic-k8s-role
      containers:
      - name: cic-k8s-ingress-controller
        image: "quay.io/citrix/citrix-k8s-ingress-controller:1.11.2"
        args:
          - --ingress-classes
            citrix
          - --feature-node-watch
            true
         ### added for COE
# add back after bug fix for cpx#####
          - --configmap
            tier-2-adc/cic-configmap
# remove after bug fix for cpx#####
#        envFrom:
#        - configMapRef:
#            name: cic-configmap
#############
        imagePullPolicy: Always
