on-prem/ServiceMeshLite/coe/manifest/coe.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: coe
  labels: 
    app: coe
spec:
  replicas: 1
  selector:
    matchLabels:
      app: coe
  template:
    metadata:
      name: coe
      labels:
        app: coe
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "5563"
    spec:
      containers:
        - name: coe
          image: "quay.io/citrix/citrix-observability-exporter:1.3.001"
          imagePullPolicy: Always
          ports:
            - containerPort: 5557
              name: lstream
            - containerPort: 5563
              name: rest
          volumeMounts:
            - name: lstreamd-config
              mountPath: /var/logproxy/lstreamd/conf/lstreamd_default.conf
              subPath: lstreamd_default.conf
            - name: core-data
              mountPath: /cores/
      volumes:
        - name: lstreamd-config
          configMap:
            name: coe-config
        - name: core-data
          emptyDir: {}
---
# Citrix-observability-exporter NodePort service
apiVersion: v1
kind: Service
metadata:
  name: coe
  labels:
    app: coe
spec:
  type: NodePort
  ports:
    - port: 5557
#      nodePort: 30026
      protocol: TCP
      name: lstreamd
    - port: 5563
#      nodePort: 30071
      protocol: TCP
      name: rest
  selector: 
      app: coe
