on-prem/ServiceMeshLite/coe/manifest/cpx.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-hotdrinks
  labels:
    name: cpx-ingress-hotdrinks
    app: cpx-ingress-hotdrinks
spec:
  selector:
    matchLabels:
      app: cpx-ingress-hotdrinks
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-hotdrinks
      labels:
        app: cpx-ingress-hotdrinks
      annotations: null
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-79.64
          tty: true
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
        # Add cic as a sidecar
        - name: cic
          image: quay.io/citrix/citrix-k8s-ingress-controller:1.18.5
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
            - --ingress-classes
              hotdrink
            - --default-ssl-certificate
              $(POD_NAMESPACE)/hotdrink-secret
            - --configmap
              tier-2-adc/cic-configmap
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}
        
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-colddrinks
  labels:
    name: cpx-ingress-colddrinks
    app: cpx-ingress-colddrinks
spec:
  selector:
    matchLabels:
      app: cpx-ingress-colddrinks
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-colddrinks
      labels:
        app: cpx-ingress-colddrinks
      annotations: null
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-79.64
          tty: true
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
        # Add cic as a sidecar
        - name: cic
          image: quay.io/citrix/citrix-k8s-ingress-controller:1.18.5
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
            - --ingress-classes
              colddrink
            - --default-ssl-certificate
              $(POD_NAMESPACE)/colddrink-secret
            - --configmap
              tier-2-adc/cic-configmap
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: cpx-ingress-guestbook
  labels:
    name: cpx-ingress-guestbook
    app: cpx-ingress-guestbook
spec:
  selector:
    matchLabels:
      app: cpx-ingress-guestbook
  replicas: 1
  template:
    metadata:
      name: cpx-ingress-guestbook
      labels:
        app: cpx-ingress-guestbook
      annotations: null
    spec:
      serviceAccountName: cpx-ingress-k8s-role
      containers:
        - name: cpx-ingress
          image: quay.io/citrix/citrix-k8s-cpx-ingress:13.0-79.64
          tty: true
          securityContext:
             privileged: true
          imagePullPolicy: Always
          volumeMounts:
            - mountPath: /var/deviceinfo
              name: shared-data
            - mountPath: /cpx/
              name: cpx-volume
        # Add cic as a sidecar
        - name: cic
          image: quay.io/citrix/citrix-k8s-ingress-controller:1.18.5
          volumeMounts:
          - mountPath: /var/deviceinfo
            name: shared-data
          args:
            - --ingress-classes
              guestbook
            - --configmap
              tier-2-adc/cic-configmap
          imagePullPolicy: Always
      volumes:
      - name: shared-data
        emptyDir: {}
      - name: cpx-volume
        emptyDir: {}

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-hotdrinks
  labels:
    app: lb-service-hotdrinks
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-ingress-hotdrinks

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-colddrinks
  labels:
    app: lb-service-colddrinks
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    name: http
    targetPort: 80
  - port: 443
    protocol: TCP
    name: https
    targetPort: 443
  selector:
    app: cpx-ingress-colddrinks

---

apiVersion: v1
kind: Service
metadata:
  name: lb-service-guestbook
  labels:
    app: lb-service-guestbook
spec:
  clusterIP: None
  ports:
  - port: 80
    protocol: TCP
    name: frontend
    targetPort: 80
  - port: 6379
    protocol: TCP
    name: guestbook
    targetPort: 6379
  selector:
    app: cpx-ingress-guestbook
---
