on-prem/ServiceMeshLite/coe/manifest/elasticsearch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elasticsearch
spec:
  selector:
    matchLabels: 
      app: elasticsearch
  replicas: 1
  template:
    metadata:
      name: elasticsearch
      labels:
        app: elasticsearch
    spec:
      containers:
      - name: elasticsearch
        image:  docker.elastic.co/elasticsearch/elasticsearch:7.8.0
        ports:
        - name: es-9200
          containerPort: 9200
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  type: ClusterIP
  ports:
  - name: es-9200
    port: 9200
  selector:
    app: elasticsearch

---
