on-prem/ServiceMeshLite/coe/manifest/kibana.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kibana
spec:
  selector:
    matchLabels: 
      app: kibana
  replicas: 1
  template:
    metadata:
      name: kibana
      labels:
        app: kibana
    spec:
      containers:
      - name: kibana
        image: docker.elastic.co/kibana/kibana:7.8.0
        ports:
        - name: kibana-5601
          containerPort: 5601
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
  labels: 
    app: kibana
spec:
  type: ClusterIP
  ports:
  - name: kibana-5601
    port: 5601
  selector:
    app: kibana
---
