on-prem/ServiceMeshLite/coe/manifest/zipkin.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zipkin
spec:
  selector:
    matchLabels: 
      app: zipkin
  replicas: 1
  template:
    metadata:
      name: zipkin
      labels:
        app: zipkin
    spec:
      containers:
      - name: zipkin
        image:  openzipkin/zipkin:2.21.0
        ports:
        - name: zipkin-9411 
          containerPort: 9411 
        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  type: ClusterIP
  ports:
  - name: zipkin-9411
    port: 9411
  selector:
    app: zipkin
