on-prem/ServiceMeshLite/coe/manifest/team-colddrink.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-colddrinks
  labels:
      name: frontend-colddrinks
spec:
  selector:
    matchLabels:
      app: frontend-colddrinks
  replicas: 2
  template:
    metadata:
      labels:
        app: frontend-colddrinks
    spec:
      containers:
      - name: frontend-colddrinks
        image: "quay.io/sample-apps/colddrinks:v1"
        ports:
        - name: colddrinks-80
          containerPort: 80
        - name: colddrinks-443
          containerPort: 443
#        imagePullPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-colddrinks
spec:
  clusterIP: None
  ports:
  - name: colddrinks-80
    port: 80
    targetPort: 80
  - name: colddrinks-443
    port: 443
    targetPort: 443
  selector:
    app: frontend-colddrinks

---
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: colddrink
spec:
  controller: citrix.com/ingress-controller
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colddrinks-ingress
  annotations:
   ingress.citrix.com/secure-service-type: "ssl_tcp"
   ingress.citrix.com/secure_backend: '{"frontend-colddrinks": "True"}'
   ingress.citrix.com/analyticsprofile: '{"webinsight": {"httpurl":"ENABLED", "httpuseragent":"ENABLED", "httphost":"ENABLED", "httpmethod":"ENABLED", "httpcontenttype":"ENABLED"}, "tcpinsight": {"tcpBurstReporting":"DISABLED"}}'
spec:
  ingressClassName: colddrink
  tls:
  - secretName: "colddrink-secret"
  defaultBackend:
    service:
      name: frontend-colddrinks
      port: 
        number: 443
